# contact-manager-api

./: .gitignore  app.py  pyproject.toml  requirement.txt  requirements.txt
config/: dbconnection.py
middleware/: valid_fields.py
