[tool.poetry]
name = "todo-api"
version = "0.1.0"
description = ""
authors = ["karthikn"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
pymongo = "^4.7.3"
flask-smorest = "^0.44.0"
python-dotenv = "^1.0.1"
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
